k3s/manifests/network-policies/namespaces/monitoring/glance/glance-network.yaml
# glance Egress

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-glance-egress
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app: glance
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443

---

# glance Ingress

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-glance-ingress
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app: glance
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.X.X/24
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app: homarr
      ports:
        - protocol: TCP
          port: 8080
